# OpenGL-Learning

./: .clang-format  CMakeLists.txt  Dependencies.cmake  LICENSE  README.md
Core/: CMakeLists.txt
Core/assets/shaders/: frag.glsl  vert.glsl
Core/src/: camera.cpp  camera.h  index_buffer.cpp  index_buffer.h  main.cpp  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.h
